# Rail-Operations-System-Environment

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  panel.cpp  panel.h  track.cpp
editor/: interface.cpp  interface.h
src/: main.cpp  panel.cpp  panel.h  textureManager.cpp  textureManager.h  track.h
src/editor/: interface.cpp  interface.h
src/gui/: elements.cpp  elements.h  panel.cpp  panel.h  panelManager.cpp  panelManager.h  uiConstants.h
src/gui/elements/: Element.cpp  Element.h  buttonElement.h  divider.h  navItem.h  text.h
